--- a/.github/workflows/daily-build-executor.yml
+++ b/.github/workflows/daily-build-executor.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Ballerina Build and Test
         run: |
-          mvn -f ../native clean install 
+          mvn -f ./iso8583/native clean install 
           pushd "${{ inputs.working_dir }}"
           bal build 
           bal test --test-report --code-coverage --coverage-format=xml
